--- a/app/styles/SectionChooser.scss
+++ b/app/styles/SectionChooser.scss
@@ -1,5 +1,5 @@
 .sectionChooser {
   .ui.selection.dropdown {
-    min-width: 12em;
+    min-width: 14em;
   }
 }
